Increase Gradle Performance
I added the best Garbage Collection flags to the Client and Build vm, to increase performance and get rid of the one time daemon.